--- a/style/style.css
+++ b/style/style.css
@@ -34,7 +34,7 @@ header nav a:hover{
     color: #fff;
 
 }
-/*Filme principal*/
+/*Filme principal */
 .filme-principal{
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)), url('/img/capa-house.jpg');
@@ -47,7 +47,34 @@ header nav a:hover{
     align-items: flex-start;
 }.filme-principal .descricao{
     margin-bottom: 50px;
+    margin-top: 10px;
+    margin-bottom: 40px;
 }
-.titulo{
+.filme-principal .titulo{
+    margin-top:15% ;
     font-size: 40px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
+.botao{
+    background-color:rgba(0,0,0,.50) ;
+    border: none;
+    color: white;
+
+    padding: 15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+}
+
+.botao:hover{
+    background-color: white;
+    color: black;
+    
+}
+
+.botao i{
+    margin-right: 8px;
+}
+
