--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,7 @@
 
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -22,6 +25,7 @@ header .container-menu{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
     
 }
 header .logo{
@@ -44,7 +48,7 @@ header nav a:hover{
 .filme-principal{
     font-size: 16px;
     background: linear-gradient(rgba(0,0,0,.50), rgba(0,0,0,.50)), url('/img/capa-house.jpg');
-    height: 400px;
+    height: 500px;
     background-size: cover;
 
     display: flex;
@@ -93,4 +97,8 @@ header nav a:hover{
     width: 100%;
     display: block;
 
+}
+.box-filme:hover{
+    cursor: pointer;
+    
 }
